[gd_scene load_steps=43 format=3 uid="uid://ciufjmooellt4"]

[ext_resource type="Script" uid="uid://bl2iqhe6gmtq5" path="res://Scripts/Towers/income_joker.gd" id="1_u1plp"]
[ext_resource type="Script" uid="uid://d308mfqogfxi3" path="res://Scripts/UI/simple_level_up_system.gd" id="2_d6n6c"]
[ext_resource type="FontFile" uid="uid://c3sky53vd0g4j" path="res://Art/VisualArt/UI/Fonts/Varnished.ttf" id="3_sk5p7"]
[ext_resource type="Texture2D" uid="uid://dohmuqr4gpm2h" path="res://Art/VisualArt/Towers/IncomeJokerTower/IncomeJokerBase.png" id="4_d6n6c"]
[ext_resource type="Texture2D" uid="uid://cibmu0foalse2" path="res://Art/VisualArt/Towers/IncomeJokerTower/JokerTowerHeadIdle.png" id="5_sk5p7"]
[ext_resource type="Texture2D" uid="uid://df3jn5soditru" path="res://Art/VisualArt/Towers/IncomeJokerTower/JokerTowerIdle2.png" id="6_rgfx3"]
[ext_resource type="Texture2D" uid="uid://bl4ocvv2qy2qp" path="res://Art/VisualArt/Towers/IncomeJokerTower/JokerTowerFaces1.png" id="7_71crm"]
[ext_resource type="AudioStream" uid="uid://0kisthjs2m87" path="res://Art/Audio/Towers/IncomeJoker/Incomejoker.wav" id="8_sk5p7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdxue"]
bg_color = Color(0, 0, 0, 0.352941)
corner_radius_top_left = 360
corner_radius_top_right = 360
corner_radius_bottom_right = 360
corner_radius_bottom_left = 360

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wqdec"]
load_path = "res://.godot/imported/RangeLvlButton.png-8c567b1806db676702253cbc6b480a3b.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5xryy"]
load_path = "res://.godot/imported/RangeLvlButtonPressed.png-25d379852739b83faeb189d5b7f408b1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o4w15"]
load_path = "res://.godot/imported/RangeLvlButtonHover.png-b918d19c937f4a731194f56ce4b4346c.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7sf2f"]
load_path = "res://.godot/imported/RangeLvlButtonDisabled.png-ca7cc725cc3f6e2267d1596cf7ed6920.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gjlfk"]
load_path = "res://.godot/imported/SellButton.png-09d310e81c226c0578cad5e82228b1d2.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_x1obe"]
load_path = "res://.godot/imported/SellButtonPressed.png-cabdeff4cd6662caa5d7834b2db32d68.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ffcg4"]
load_path = "res://.godot/imported/SellButtonHover.png-8301914de73e869eb8e505a11e28ef13.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mcu4p"]
load_path = "res://.godot/imported/SellButtonDisabled.png-95ac3321fa06a654a446083326888911.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_qcp6c"]
atlas = ExtResource("5_sk5p7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdxue"]
atlas = ExtResource("5_sk5p7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix5w6"]
atlas = ExtResource("5_sk5p7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1je7"]
atlas = ExtResource("5_sk5p7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3btih"]
atlas = ExtResource("5_sk5p7")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycvmm"]
atlas = ExtResource("5_sk5p7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_05wsd"]
atlas = ExtResource("6_rgfx3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6767"]
atlas = ExtResource("6_rgfx3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqs0q"]
atlas = ExtResource("6_rgfx3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gufr"]
atlas = ExtResource("6_rgfx3")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtbxn"]
atlas = ExtResource("6_rgfx3")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w3u8"]
atlas = ExtResource("6_rgfx3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1klds"]
atlas = ExtResource("7_71crm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8do61"]
atlas = ExtResource("7_71crm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsx4p"]
atlas = ExtResource("7_71crm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk02e"]
atlas = ExtResource("7_71crm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7n5o"]
atlas = ExtResource("7_71crm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exjnl"]
atlas = ExtResource("7_71crm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmcwa"]
atlas = ExtResource("7_71crm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_y46ed"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcp6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdxue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix5w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1je7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3btih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycvmm")
}],
"loop": true,
"name": &"Default1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05wsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6767")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqs0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gufr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtbxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w3u8")
}],
"loop": true,
"name": &"Default2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1klds")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_8do61")
}],
"loop": false,
"name": &"Generate1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsx4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk02e")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_g7n5o")
}],
"loop": false,
"name": &"Generate2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exjnl")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_pmcwa")
}],
"loop": false,
"name": &"Generate3",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ix5w6"]
size = Vector2(67.0455, 106.826)

[sub_resource type="CanvasTexture" id="CanvasTexture_og1a5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6h1he"]
texture = SubResource("CanvasTexture_og1a5")
modulate_color = Color(1, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_fie1e"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_20bb6"]
texture = SubResource("CanvasTexture_fie1e")
modulate_color = Color(0, 1, 0, 1)

[node name="IncomeJoker" type="Area2D" node_paths=PackedStringArray("sound") groups=["buffer_tower", "income_tower", "tower"]]
z_index = 2
texture_filter = 1
scale = Vector2(0.88, 0.69)
script = ExtResource("1_u1plp")
sound = NodePath("MoneySound")

[node name="RangeArea" type="Panel" parent="."]
z_index = 3
offset_left = -59.0
offset_top = -45.0
offset_right = 58.0
offset_bottom = 76.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kdxue")

[node name="SimpleLevelUpSystem" type="Control" parent="." node_paths=PackedStringArray("tower") groups=["towerUpgrader"]]
visible = false
z_index = 1001
layout_mode = 3
anchors_preset = 0
offset_left = 128.0
offset_top = 48.0
offset_right = 128.0
offset_bottom = 48.0
mouse_filter = 2
script = ExtResource("2_d6n6c")
tower = NodePath("..")
sell_price = 2500
level_2_cost = 8000
level_3_cost = 10000

[node name="Panel" type="Panel" parent="SimpleLevelUpSystem"]
layout_mode = 0
offset_left = -64.0
offset_top = -56.0
offset_right = 132.0
offset_bottom = 464.0

[node name="StatsLabel" type="RichTextLabel" parent="SimpleLevelUpSystem/Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 184.0
offset_bottom = 232.0
theme_override_fonts/normal_font = ExtResource("3_sk5p7")
bbcode_enabled = true
text = "asdsdsdasdasd"

[node name="TowerLevelUp" type="TextureButton" parent="SimpleLevelUpSystem/Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 32.0
offset_top = 168.0
offset_right = 160.0
offset_bottom = 296.0
texture_normal = SubResource("CompressedTexture2D_wqdec")
texture_pressed = SubResource("CompressedTexture2D_5xryy")
texture_hover = SubResource("CompressedTexture2D_o4w15")
texture_disabled = SubResource("CompressedTexture2D_7sf2f")

[node name="Label" type="Label" parent="SimpleLevelUpSystem/Panel/TowerLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 107.0
offset_right = 103.0
offset_bottom = 130.0
text = "Level up"

[node name="Label2" type="Label" parent="SimpleLevelUpSystem/Panel/TowerLevelUp"]
layout_mode = 0
offset_left = 27.0
offset_top = 131.0
offset_right = 103.0
offset_bottom = 154.0
text = "cost"

[node name="SellTower" type="TextureButton" parent="SimpleLevelUpSystem/Panel"]
texture_filter = 1
layout_mode = 2
offset_left = 32.0
offset_top = 304.0
offset_right = 160.0
offset_bottom = 432.0
texture_normal = SubResource("CompressedTexture2D_gjlfk")
texture_pressed = SubResource("CompressedTexture2D_x1obe")
texture_hover = SubResource("CompressedTexture2D_ffcg4")
texture_disabled = SubResource("CompressedTexture2D_mcu4p")

[node name="Label" type="Label" parent="SimpleLevelUpSystem/Panel/SellTower"]
layout_mode = 0
offset_left = 27.0
offset_top = 107.0
offset_right = 103.0
offset_bottom = 130.0
text = "Sell tower"

[node name="Label2" type="Label" parent="SimpleLevelUpSystem/Panel/SellTower"]
layout_mode = 0
offset_left = 27.0
offset_top = 131.0
offset_right = 103.0
offset_bottom = 154.0
text = "price"

[node name="CheckBox" type="CheckButton" parent="SimpleLevelUpSystem/Panel"]
layout_mode = 0
offset_left = 19.0
offset_top = 140.0
offset_right = 188.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("3_sk5p7")
text = "Show cooldown"

[node name="TowerBase" type="Sprite2D" parent="."]
position = Vector2(-1, -17)
texture = ExtResource("4_d6n6c")
hframes = 3

[node name="Turret" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -44)
sprite_frames = SubResource("SpriteFrames_y46ed")
animation = &"Default1"
frame_progress = 0.514233

[node name="MoneyTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="clickshape" type="CollisionShape2D" parent="."]
z_index = 101
position = Vector2(-0.568183, -5.58696)
shape = SubResource("RectangleShape2D_ix5w6")

[node name="MoneySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sk5p7")
volume_db = -5.977
bus = &"sfx"

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -19.0
offset_top = 20.0
offset_right = 19.0
offset_bottom = 25.0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxTexture_6h1he")
theme_override_styles/fill = SubResource("StyleBoxTexture_20bb6")
show_percentage = false

[connection signal="button_down" from="SimpleLevelUpSystem/Panel/TowerLevelUp" to="SimpleLevelUpSystem" method="_on_tower_level_up_button_down"]
[connection signal="button_down" from="SimpleLevelUpSystem/Panel/TowerLevelUp" to="SimpleLevelUpSystem" method="_on_range_level_up_button_down"]
[connection signal="button_down" from="SimpleLevelUpSystem/Panel/SellTower" to="SimpleLevelUpSystem" method="_on_sell_tower_button_down"]
[connection signal="pressed" from="SimpleLevelUpSystem/Panel/SellTower" to="SimpleLevelUpSystem" method="_on_sell_tower_pressed"]
[connection signal="toggled" from="SimpleLevelUpSystem/Panel/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="animation_finished" from="Turret" to="." method="_on_tower_animation_finished"]
[connection signal="timeout" from="MoneyTimer" to="." method="_on_money_timer_timeout"]
